--- a/TC65Localizer/nbproject/project.properties
+++ b/TC65Localizer/nbproject/project.properties
@@ -32,7 +32,7 @@ javac.deprecation=false
 javac.encoding=UTF-8
 javac.optimize=false
 javac.source=1.3
-javac.target=1.1
+javac.target=1.3
 javadoc.author=false
 javadoc.encoding=
 javadoc.noindex=false
@@ -51,8 +51,8 @@ manifest.file=manifest.mf
 manifest.is.liblet=false
 manifest.jad=
 manifest.manifest=
-manifest.midlets=MIDlet-1: IMlet, , tc65localizer.IMlet\n
-manifest.others=MIDlet-Vendor: Vendor\nMIDlet-Name: TC65Localizer\nMIDlet-Version: 1.0\n
+manifest.midlets=MIDlet-1: IMlet, ,com.batorek.tc65localizer.IMlet\n
+manifest.others=MIDlet-Vendor: Bartosz Batorek\nMIDlet-Name: TC65Localizer\nMIDlet-Version: ${deployment.number}\n
 manifest.pushregistry=
 name=TC65Localizer
 no.dependencies=false
