Added ModuleInitializer scheme

--- a/TC65Localizer/nbproject/project.properties
+++ b/TC65Localizer/nbproject/project.properties
@@ -51,7 +51,7 @@ manifest.file=manifest.mf
 manifest.is.liblet=false
 manifest.jad=
 manifest.manifest=
-manifest.midlets=MIDlet-1: IMlet, ,com.batorek.tc65localizer.IMlet\n
+manifest.midlets=MIDlet-1: IMlet, ,com.batorek.tc65localizer.IMletMain\n
 manifest.others=MIDlet-Vendor: Bartosz Batorek\nMIDlet-Name: TC65Localizer\nMIDlet-Version: ${deployment.number}\n
 manifest.pushregistry=
 name=TC65Localizer
