--- a/TC65Localizer/nbproject/project.properties
+++ b/TC65Localizer/nbproject/project.properties
@@ -12,6 +12,7 @@ build.root.dir=build
 debug.level=debug
 debugger.timeout=
 deployment.copy.target=deploy
+deployment.deviceanywhere.device=-1
 deployment.instance=default
 deployment.jarurl=${dist.jar}
 deployment.method=NONE
@@ -22,6 +23,7 @@ dist.jar=TC65Localizer.jar
 dist.javadoc.dir=${dist.dir}/doc
 dist.root.dir=dist
 extra.classpath=
+file.reference.builtin.ks=${netbeans.user}/config/j2me/builtin.ks
 filter.exclude.tests=false
 filter.excludes=
 filter.more.excludes=**/overview.html,**/package.html
@@ -97,9 +99,9 @@ semc.application.uid=E0379539
 semc.certificate.path=
 semc.private.key.password=
 semc.private.key.path=
-sign.alias=
+sign.alias=minimal
 sign.enabled=false
-sign.keystore=
+sign.keystore=${file.reference.builtin.ks}
 src.dir=src
 use.emptyapis=true
 use.preprocessor=true
