Added org.json.me.tc65 submodule

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ TC65Localizer/build/
 TC65Localizer/nbproject/private/
 TC65Server/build/
 TC65Server/nbproject/private/
+org.json.me.tc65/org.json.me.tc65/build/
+org.json.me.tc65/org.json.me.tc65/nbproject/private/
