--- a/TC65Localizer/nbproject/project.properties
+++ b/TC65Localizer/nbproject/project.properties
@@ -45,7 +45,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-libs.classpath=
+libs.classpath=${reference.org_json_me_tc65.jar}
 main.class=
 main.class.class=applet
 manifest.apipermissions=
@@ -77,6 +77,8 @@ platform.type=UEI-1.0
 preprocessed.dir=${build.dir}/preprocessed
 preverify.classes.dir=${build.dir}/preverified
 preverify.sources.dir=${build.dir}/preverifysrc
+project.org_json_me_tc65=../org.json.me.tc65/org.json.me.tc65
+reference.org_json_me_tc65.jar=${project.org_json_me_tc65}/dist/org.json.me.tc65.jar
 resources.dir=resources
 run.cmd.options=
 run.jvmargs=
