--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ TC65Server/build/
 TC65Server/nbproject/private/
 org.json.me.tc65/org.json.me.tc65/build/
 org.json.me.tc65/org.json.me.tc65/nbproject/private/
+/TC65Server/dist/
