--- a/TC65Server/nbproject/project.properties
+++ b/TC65Server/nbproject/project.properties
@@ -3,6 +3,13 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -28,6 +35,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.bartosz_batorek_mgr.pdf=lib/bartosz_batorek_mgr.pdf
 file.reference.postgresql-9.3-1102.jdbc41.jar=lib/postgresql-9.3-1102.jdbc41.jar
 includes=**
 j2ee.compile.on.save=true
@@ -41,7 +49,7 @@ j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:$
 j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api.jar
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.postgresql-9.3-1102.jdbc41.jar}
 # Space-separated list of extra javac options
@@ -83,7 +91,8 @@ source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
 test.src.dir=test
-war.content.additional=
+war.content.additional=\
+    ${file.reference.bartosz_batorek_mgr.pdf}
 war.ear.name=${war.name}
 war.name=TC65Server.war
 web.docbase.dir=web
