--- a/TC65Server/nbproject/project.properties
+++ b/TC65Server/nbproject/project.properties
@@ -11,7 +11,7 @@ auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 build.classes.dir=${build.web.dir}/WEB-INF/classes
-build.classes.excludes=**/*.java,**/*.form
+build.classes.excludes=**/*.java,**/*.form,**/*.git*
 build.dir=build
 build.generated.dir=${build.dir}/generated
 build.generated.sources.dir=${build.dir}/generated-sources
@@ -35,7 +35,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.bartosz_batorek_mgr.pdf=lib/bartosz_batorek_mgr.pdf
 file.reference.postgresql-9.3-1102.jdbc41.jar=lib/postgresql-9.3-1102.jdbc41.jar
 includes=**
 j2ee.compile.on.save=true
@@ -91,8 +90,7 @@ source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
 test.src.dir=test
-war.content.additional=\
-    ${file.reference.bartosz_batorek_mgr.pdf}
+war.content.additional=
 war.ear.name=${war.name}
 war.name=TC65Server.war
 web.docbase.dir=web
